# MAE3185

./: Lecture02-24-25.c
exercise1/: CMakeLists.txt  pico_sdk_import.cmake
exercise2touchscreen/: CMakeLists.txt  main.c
exercise3/: CMakeLists.txt  main.c
